fix: modificar endpoint para obtener los precios
